--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div id="video_box">
 	    <div id="video_overlays"></div>
 	    <div>
-	        <video id="videowinter" src="moutains.mp4"  type="video/mp4" autoplay loop>
+	        <video id="videowinter" src="mountains.mp4"  type="video/mp4" autoplay loop>
 						Your browser does not support this streaming content.
 					</video>
 	    </div>
